--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script>var $ = {};</script>
     <script src="input.js"></script>
     <script src="camera.js"></script>
+    <script src="collisions.js"></script>
     <script src="hero.js"></script>
     <script src="wall.js"></script>
     <script src="game.js"></script>
