Added basic mechanics for fire and earth

--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
       <canvas id="fg"></canvas>
     </div>
     <script>var $ = {};</script>
+    <script src="constants.js"></script>
+    <script src="util.js"></script>
     <script src="input.js"></script>
     <script src="camera.js"></script>
     <script src="collisions.js"></script>
+    <script src="powers.js"></script>
     <script src="hero.js"></script>
     <script src="wall.js"></script>
     <script src="game.js"></script>
