Added HUD. Added health and mana regeneration. Added air element

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <script src="powers.js"></script>
     <script src="hero.js"></script>
     <script src="wall.js"></script>
+    <script src="hud.js"></script>
     <script src="game.js"></script>
   </body>
 </html>
