Adds one sample enemy to game

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <script src="collisions.js"></script>
     <script src="powers.js"></script>
     <script src="hero.js"></script>
+    <script src="enemy.js"></script>
     <script src="wall.js"></script>
     <script src="hud.js"></script>
     <script src="game.js"></script>
