Added basci support for spritesheet

--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
         position: relative;*/
       }
 
+      #tileset {
+        display: none;
+      }
     </style>
   </head>
   <body>
+    <img id="tileset" src="t2.gif"/>
     <div id="wrapper">
       <canvas id="fg"></canvas>
     </div>
