Fixed input for hero. Minor fixes in index

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         top: 50%;
         color: #ccc;
       }
-      .ii {
+      #i .ii, .ii {
         color: #888;
         font-size: 11px;
         top: 95%;
@@ -92,7 +92,7 @@
         <p id="i4">You are the only hope for humanity</p>
         <p id="i5">You are the last man alive</p>
         <p id="i6">It is on you to find the four elements and restore life and light</p>
-        <p id="i7">No pressure</p>
+        <p id="i7">No pressure ;)</p>
         <p class="ii">Press 'Enter' to skip intro</p>
       </div>
       <!-- Game over screen -->
