--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
     <script src="powers.js"></script>
     <script src="hero.js"></script>
     <script src="wall.js"></script>
+    <script src="fow.js"></script>
     <script src="hud.js"></script>
     <script src="scene.js"></script>
     <script src="game.js"></script>
