Added dumb enemy (class and render). Added damage to powers

--- a/index.html
+++ b/index.html
@@ -116,10 +116,12 @@
     <script src="collisions.js"></script>
     <script src="powers.js"></script>
     <script src="hero.js"></script>
+    <script src="enemies.js"></script>
     <script src="wall.js"></script>
     <script src="fow.js"></script>
     <script src="hud.js"></script>
     <script src="scene.js"></script>
+    <script src="textpop.js"></script>
     <script src="game.js"></script>
   </body>
 </html>
