First code optimization

--- a/index.html
+++ b/index.html
@@ -89,10 +89,9 @@
         <p id="i1">They said you were crazy and locked you out</p>
         <p id="i2">They let you there so you rot</p>
         <p id="i3">They now are DEAD</p>
-        <p id="i4">You are the only hope for humanity</p>
-        <p id="i5">You are the last man alive</p>
-        <p id="i6">It is on you to find the four elements and restore life and light</p>
-        <p id="i7">No pressure ;)</p>
+        <p id="i4">You are the last man alive</p>
+        <p id="i5">It is on you to find the four elements and restore life</p>
+        <p id="i6">No pressure ;)</p>
         <p class="ii">Press 'Enter' to skip intro</p>
       </div>
       <!-- Game over screen -->
