--- a/index.html
+++ b/index.html
@@ -30,19 +30,20 @@
     </div>
   </div>
   <script>var $ = {};</script>
-  <script src="constants.js"></script>
-  <script src="util.js"></script>
-  <script src="input.js"></script>
-  <script src="camera.js"></script>
-  <script src="collisions.js"></script>
-  <script src="powers.js"></script>
-  <script src="hero.js"></script>
-  <script src="enemies.js"></script>
-  <script src="wall.js"></script>
-  <script src="fow.js"></script>
-  <script src="hud.js"></script>
-  <script src="scene.js"></script>
-  <script src="textpop.js"></script>
-  <script src="game.js"></script>
+  <!-- script src="all.min.js"></script -->
+  <script src="js/constants.js"></script>
+  <script src="js/util.js"></script>
+  <script src="js/input.js"></script>
+  <script src="js/camera.js"></script>
+  <script src="js/collisions.js"></script>
+  <script src="js/powers.js"></script>
+  <script src="js/hero.js"></script>
+  <script src="js/enemies.js"></script>
+  <script src="js/wall.js"></script>
+  <script src="js/fow.js"></script>
+  <script src="js/hud.js"></script>
+  <script src="js/scene.js"></script>
+  <script src="js/textpop.js"></script>
+  <script src="js/game.js"></script>
 </body>
 </html>
