Added power items (class). Rendered water power by code. Fixed minor issues

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <script src="js/camera.js"></script>
   <script src="js/collisions.js"></script>
   <script src="js/powers.js"></script>
+  <script src="js/items.js"></script>
   <script src="js/hero.js"></script>
   <script src="js/enemies.js"></script>
   <script src="js/wall.js"></script>
