Added logic and instructions to new gained powers

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
       <p id="s1">Press Enter to start</p>
       <p class="ii">By @luduspactum - js13k 2014</p>
     </div>
+    <div id="m">
+      <p id="m1"></p>
+    </div>
   </div>
   <script>var $ = {};</script>
   <!-- script src="all.min.js"></script -->
