Added procedural level generation

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <script>var $ = {};</script>
   <!-- script src="all.min.js"></script -->
   <script src="js/constants.js"></script>
+  <script src="js/rect.js"></script>
   <script src="js/util.js"></script>
   <script src="js/input.js"></script>
   <script src="js/camera.js"></script>
@@ -47,6 +48,7 @@
   <script src="js/fow.js"></script>
   <script src="js/hud.js"></script>
   <script src="js/scene.js"></script>
+  <script src="js/level.js"></script>
   <script src="js/textpop.js"></script>
   <script src="js/game.js"></script>
 </body>
