--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
   <script src="js/hero.js"></script>
   <script src="js/enemies.js"></script>
   <script src="js/wall.js"></script>
+  <script src="js/doors.js"></script>
   <script src="js/fow.js"></script>
   <script src="js/hud.js"></script>
   <script src="js/scene.js"></script>
