Changed the index title to save some characters

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>test</title>
+  <title>Pariah</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
@@ -26,7 +26,7 @@
     <div id="s">
       <p id="s0">Pariah</p>
       <p id="s1">Press Enter to start</p>
-      <p class="ii">By @luduspactum - js13k 2014</p>
+      <p class="ii">By @luduspactum - js13kGames 2014</p>
     </div>
     <div id="m">
       <p id="m1"></p>
