--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <img id="tileset" src="t.gif"/>
+  <img id="ts" src="t.gif"/>
   <div id="wrapper">
     <canvas id="fg"></canvas>
     <div id="i">
