--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <img id="ts" src="t.gif"/>
-  <div id="wrapper">
+  <div id="w">
     <canvas id="fg"></canvas>
     <div id="i">
       <p id="i0">They laughed when you said the darkness would come for all of us</p>
@@ -20,7 +20,6 @@
     </div>
     <div id="g">
       <p id="g0">Game Over</p>
-      <p id="g1">Oh, the humanity!</p>
       <p class="ii">Press Enter to restart</p>
     </div>
     <div id="s">
@@ -32,20 +31,7 @@
       <p id="e0">You have given your own life to restore light on earth</p>
       <p id="e1">Someday mankind will appreciate your sacrifice</p>
       <p id="e2">The End</p>
-    </div>
-    <div id="c">
-      <p id="c0">Thanks for playing!</p>
-      <p id="c1">Created by Ludus Pactum for the js13kGames 2014</p>
-      <p id="c11">Credits</p>
-      <p id="c2">Programming</p>
-      <p id="c3">Wil Alvarez</p>
-      <p id="c4">Graphics</p>
-      <p id="c5">Alexander Hass</p>
-      <p id="c6">Audio</p>
-      <p id="c7">Juan Guzman</p>
-      <p id="c8">Contributors</p>
-      <p id="c9">Fernando Larra&ntilde;aga</p>
-      <p id="ci">Press 'Enter' to restart</p>
+      <p id="ci">Press Enter to restart</p>
     </div>
     <div id="m">
       <p id="m1"></p>
