Fixed string at the end of the game

--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
       <p id="i3">They now are DEAD</p>
       <p id="i4">You are the last man alive</p>
       <p id="i5">It is on you to find the four elements and restore life</p>
-      <p id="i6">No pressure ;)</p>
-      <p class="ii">Press Enter to skip intro</p>
+      <p id="ii">Press Enter to skip intro</p>
     </div>
     <div id="g">
       <p id="g0">Game Over</p>
-      <p class="ii">Press Enter to restart</p>
+      <p id="gi">Press Enter to restart</p>
     </div>
     <div id="s">
       <p id="s0">Pariah</p>
       <p id="s1">Press Enter to start</p>
-      <p class="ii">By @luduspactum - js13kGames 2014</p>
+      <p id="si">By @luduspactum - js13kGames 2014</p>
     </div>
     <div id="e">
       <p id="e0">You have given your own life to restore light on earth</p>
