Removing duplicated code using the scene class

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <p id="e0">You have given your own life to restore light on earth</p>
       <p id="e1">Someday mankind will appreciate your sacrifice</p>
       <p id="e2">The End</p>
-      <p id="ci">Press Enter to restart</p>
+      <p id="ei">Press Enter to restart</p>
     </div>
     <div id="m">
       <p id="m1"></p>
