Added animation for zombies

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
   <script src="js/fow.js"></script>
   <script src="js/hud.js"></script>
   <script src="js/scene.js"></script>
+  <script src="js/deco.js"></script>
   <script src="js/level.js"></script>
   <script src="js/textpop.js"></script>
   <script src="js/ai.js"></script>
