Preparing to build

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     </div>
   </div>
   <script>var $ = {};</script>
-  <!-- script src="all.min.js"></script -->
-  <script src="js/constants.js"></script>
+  <script src="all.min.js"></script>
+  <!-- script src="js/constants.js"></script>
   <script src="js/rect.js"></script>
   <script src="js/util.js"></script>
   <script src="js/input.js"></script>
@@ -58,6 +58,6 @@
   <script src="js/level.js"></script>
   <script src="js/textpop.js"></script>
   <script src="js/ai.js"></script>
-  <script src="js/game.js"></script>
+  <script src="js/game.js"></script -->
 </body>
 </html>
